[gd_scene load_steps=11 format=3 uid="uid://ba73sw8db23"]

[ext_resource type="Script" uid="uid://xhxpq0t7gfjp" path="res://scriptcs/player.gd" id="1_7qrku"]
[ext_resource type="Texture2D" uid="uid://cxbpalofya1hh" path="res://assets/Sprites/crosshair.png" id="2_kc2or"]
[ext_resource type="PackedScene" uid="uid://b3bxoqyqsi2sh" path="res://scense/gun.tscn" id="2_rtp1y"]
[ext_resource type="AudioStream" uid="uid://dxla2v2vv5jql" path="res://assets/SFX/Shoot_Sfx.mp3" id="4_qc060"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_x2c71"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_nexcn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rtp1y"]
bg_color = Color(0.19215687, 0.19215687, 0.3529412, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qc060"]
bg_color = Color(0.8495337, 0.00021447062, 0.00011705398, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7qrku"]
font_size = 141
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rtp1y"]
margin = 0.06
radius = 0.691
height = 3.0

[node name="player" type="CharacterBody3D"]
script = ExtResource("1_7qrku")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_x2c71")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_nexcn")

[node name="head" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 0.9883057, 0.15248564, 0, -0.15248564, 0.9883057, 0, 0.6671368, -0.30509424)
doppler_tracking = 2
current = true

[node name="Healt_Bar" type="ProgressBar" parent="head/Camera3D"]
unique_name_in_owner = true
offset_left = 19.0
offset_top = 21.0
offset_right = 478.0
offset_bottom = 95.0
theme_override_colors/font_color = Color(0.95, 0.95, 0.95, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 46
theme_override_styles/background = SubResource("StyleBoxFlat_rtp1y")
theme_override_styles/fill = SubResource("StyleBoxFlat_qc060")
value = 100.0
show_percentage = false

[node name="Bullets_Left_Label" type="Label" parent="head/Camera3D"]
offset_left = 2.0
offset_top = 163.0
offset_right = 453.0
offset_bottom = 356.0
text = "40 / 40"
label_settings = SubResource("LabelSettings_7qrku")

[node name="TextureRect" type="TextureRect" parent="head/Camera3D"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("2_kc2or")

[node name="Gun" parent="head/Camera3D" instance=ExtResource("2_rtp1y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.439, -0.36400002, -0.7709999)

[node name="Kile_Zone" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Kile_Zone"]
shape = SubResource("CapsuleShape3D_rtp1y")

[node name="Shoot" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_qc060")
volume_db = 32.448

[connection signal="body_entered" from="Kile_Zone" to="." method="_on_kile_zone_body_entered"]
